--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -2,14 +2,22 @@ body {
   background-color: #EEEEEE;
 }
 
+.wrapper {
+  margin: 20px 0;
+}
+
 .component-container {
   position: relative;
   background-color: #FFFFFF;
-  padding: 20px 0;
+  padding: 20px 20px;
   margin-top: 20px;
   border-radius: 5px;
   & .small-divider {
     width: 30%;
+    margin: 10px auto;
+  }
+  & .normal-divider{
+    width: 100%;
     margin: 10px auto;
   }
   & .download-icon {
@@ -32,12 +40,37 @@ body {
       background-color: #139EED;
     }
   }
+  & .section-title {
+    color: #0E81C2;
+  }
 }
 
 .tooltip-inner {
   background-color: #139EED;
 }
 
-.tooltip.bottom .tooltip-arrow {
-  border-bottom-color: #139EED;
+.tooltip.left .tooltip-arrow {
+  border-left-color: #139EED;
+}
+
+.work-info {
+  font-size: 13px;
+}
+
+.image-cor {
+  width: 200px;
+  height: 100px;
+  background-color: #cccccc;
+  border-radius: 5px;
+  padding: 3px;
+}
+
+.inner-image-cor {
+  background-color: #eeeeee;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  font-size: 18px;
+  text-align: center;
+  padding-top: 20px;
 }
