--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -9,7 +9,7 @@ body {
   position: relative;
   background-color: #FFFFFF;
   padding: 20px 20px;
-  margin: 20px auto auto 20px;
+  margin: 20px auto 20px auto;
   border-radius: 5px; }
   .component-container .small-divider {
     width: 30%;
