--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -11,7 +11,7 @@ body {
   position: relative;
   background-color: #FFFFFF;
   padding: 20px 20px;
-  margin: 20px auto auto 20px;
+  margin: 20px auto 20px auto;
   border-radius: 5px;
   & .small-divider {
     width: 30%;
