--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -10,7 +10,7 @@ body {
   max-width: 900px;
   position: relative;
   background-color: #FFFFFF;
-  padding: 20px 20px;
+  padding: 20px 40px;
   margin: 20px auto 20px auto;
   border-radius: 5px;
   & .small-divider {
@@ -77,9 +77,9 @@ body {
 }
 
 .image-cor {
-  width: 200px;
+  width: 190px;
   height: 100px;
-  background-color: #cccccc;
+  background-color: #0E81C2;
   border-radius: 5px;
   padding: 3px;
 }
@@ -96,4 +96,8 @@ body {
 
 .work-info {
   margin-bottom: 40px;
+}
+
+.exp-time {
+  padding-top: 10px;
 }
