--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -13,63 +13,22 @@ body {
   padding: 20px 40px;
   margin: 20px auto 20px auto;
   border-radius: 5px;
+  overflow: hidden;
+
   & .small-divider {
     width: 30%;
     margin: 10px auto;
   }
+
   & .normal-divider{
     width: 100%;
     margin: 10px auto;
   }
-  & .download-icon {
-    background-color: #0E81C2;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    padding: 12px 12px;
-    transition: .4s all;
-    position: absolute;
-    right: 20px;
-    top: 20px;
-    z-index: 1;
-    & .fa.fa-download {
-      color: #FFFFFF;
-    }
-    &:hover {
-      cursor: pointer;
-      background-color: #139EED;
-    }
 
-    & + .tooltip .tooltip-inner {
-      background-color: #139EED;
-    }
-
-    & + .tooltip.left .tooltip-arrow {
-      border-left-color: #139EED;
-    }
-  }
-  & .info {
-    position: absolute;
-    right: 32px;
-    top: 80px;
-    z-index: 1;
-    & .fa {
-      color: #A569BD;
-    }
-    & + .tooltip .tooltip-inner {
-      background-color: #A569BD;
-      a {
-        color: white;
-      }
-    }
-
-    & + .tooltip.left .tooltip-arrow {
-      border-left-color: #A569BD;
-    }
-  }
   & .section-title {
     color: #0E81C2;
   }
+
 }
 
 .work-info {
@@ -100,4 +59,74 @@ body {
 
 .exp-time {
   padding-top: 10px;
+}
+
+.slider-menu {
+  width: 70px;
+  height: 250px;
+  background-color: #0E81C2;
+  border-radius: 0 0 0 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transition: all .5s;
+  z-index: 1000;
+
+  &.off {
+    top: -200px;
+  }
+
+  &.on {
+    top: 0;
+    & .fa.fa-chevron-down {
+      transform: rotate(180deg);
+    }
+  }
+
+  & .slider-icon {
+    text-align: center;
+    background-color: #FFFFFF;
+    margin: 20px auto;
+    display: block;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    transition: .4s all;
+    cursor: pointer;
+    & .fa-download {
+      margin-top: 7px;
+    }
+    & .fa-github-alt {
+      margin-top: 5px;
+    }
+    & .fa-envelope {
+      margin-top: 4px;
+    }
+  }
+
+  & .btn-slider {
+    background-color: #0E81C2;
+    padding: 6px;
+    position: absolute;
+    bottom: 3px;
+    left: 3px;
+    border: 2px solid white;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    transition: all .5s;
+    z-index: 100;
+
+    &:hover {
+      cursor: pointer;
+      background-color: lighten(#0E81C2, 10%);
+    }
+
+    & .fa {
+      transition: all .5s;
+      color: white;
+      font-size: 18px;
+    }
+
+  }
 }
