--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -98,4 +98,9 @@ body {
       color: white;
       font-size: 18px; }
 
+.cvinfo {
+  color: #cccccc; }
+  .cvinfo p {
+    margin-bottom: 0; }
+
 /*# sourceMappingURL=style.css.map */
